Change nav title from 'App Toolbox' to 'EduHub'

--- a/index.html
+++ b/index.html
@@ -592,7 +592,7 @@
 
   <!-- TOP NAV -->
   <nav class="top-nav">
-    <div class="nav-title">🧰 <span>App Toolbox</span></div>
+    <div class="nav-title">🧰 <span>EduHub</span></div>
     <button class="nav-btn" id="themeBtn" title="Тема">🌙</button>
     <button class="nav-btn" onclick="openImportModal()" title="Увези">📥</button>
     <button class="nav-btn" onclick="exportData()" title="Извези">📤</button>
